--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -349,75 +349,90 @@
         </OL>
       </li> <br>
     
-      <li><H3>PLEGARIA EUCARÍSTICA:</H3> Esta es la parte central y más importante de la Misa. <br>
-        <ol>
-        <li><b>De pie</b></li>
-        <li><b>S: Oremos hermanos para que este sacrificio, mio y de ustedes sea agradable a Dios Padre Todopoderoso</b></li>
-        <li>Oremus, fratres, ut hoc sacrificium meum ac vestrum Deo Patri omnipotenti placeat.</li>
-        <li><b>El Señor reciba de tus manos este sacrificio para alabanza y gloria de su Nombre, para nuestro bien y de toda su Santa Iglesia</b></li>
-        <li>Suscipiat Dominus hoc sacrificium de manibus tuis ad laudem et gloriam nominis sui, ad bonum nostrum et ad universam Ecclesiam sanctam suam.</li>
-        <br>
-        <UL>
-          <LI><h3>PREFACIO:</h3> Introducción a la Plegaria Eucarística, que culmina con el "Santo".</LI>
-          <LI>El término "prefacio" proviene del latín praefatio, que significa "proemio" o "introducción". En la liturgia, el Prefacio es una oración de acción de gracias y alabanza a Dios, que introduce la parte más solemne de la misa, que es la consagración.</LI>
-          <LI>ESTRUCTURA DEL PREFACIO</LI>
-          <li><b>De pie</b></li>
-          <LI><b> Sacerdote: "El Señor esté con ustedes." <br>
-            Sacerdos: « Dóminus vobíscum ». <br>
-            Asamblea: "Y con tu espíritu."<br>
-            Conventus: "Et cum spiritu tuo".<br><br>
-            Sacerdote: "Levantemos el corazón."<br>
-            Sacerdos: « Levemus corda nostra ».<br>
-            Asamblea: "Lo tenemos levantado hacia el Señor."<br>
-            Conventus: «Suscitati sumus ad Dominum».<br><br>
-            Sacerdote: "Demos gracias al Señor, nuestro Dios."<br>
-            Sacerdos: « Gratias agamus Domino Deo nostro ».<br>
-            Asamblea: "Es justo y necesario."<br>
-            Conventus: "Est aequum et necessarium".
-          </LI></b><br>
-          <li>El sacerdote hará un pequeña oración:</li>
-          <LI> (Prefacio Común I): <br><b> "En verdad es justo y necesario, es nuestro deber y salvación darte gracias siempre y en todo lugar, Señor, Padre santo, Dios todopoderoso y eterno, por Cristo, Señor nuestro. Porque él, con su nacimiento, renovó la vieja condición humana; con su pasión, destruyó nuestro pecado; al resucitar de entre los muertos, nos aseguró el acceso a la vida eterna; y en su ascensión al Padre, abrió las puertas del cielo."</b></LI><br>
-          <li>Vere dignum et iustum est, aequum et salutare, tibi gratias agere semper et ubique Domine, sancte Pater, omnipotens eterne Deus, per Christum Dominum nostrum. Quia veterem hominem cum sua nativitate renovavit; sua passione delevit peccatum nostrum; Ex mortuis resurrectio, ad vitam seternam nobis praestitit accessum; et in ascensione ad Patrem, portas celi aperuit.</li><br><br>
-          <LI>Prefacios Propios: Se utilizan en tiempos específicos del año litúrgico (Adviento, Cuaresma, Pascua, etc.) o en fiestas y solemnidades especiales.</LI>
-          <LI>Prefacios Comunes: Se usan en misas ordinarias, cuando no se requiere un prefacio especial.</LI><br>
-          <LI><h3>EL SANTO</h3></LI>
-          <li><b>De pie</b></li>
-          <LI> Santo, Santo, Santo es el Señor, Dios del universo. <br>
-            Llenos están el cielo y la tierra de tu gloria.
-            Hosanna en el cielo. <br>
-           Bendito el que viene en nombre del Señor.
-            Hosanna en el cielo. <br><br>
-           </LI>
-          <LI>
-            <H3>EPÍCLESIS:</H3> Invocación del Espíritu Santo para que las ofrendas se conviertan en el Cuerpo y la Sangre de Cristo.</LI>
-          <LI>La Epíclesis es un término que proviene del griego "ἐπίκλησις" (epíklēsis), que significa "invocación" o "súplica".</LI>
-          <LI>La Epíclesis es un momento en la misa en que se pide la acción transformadora del Espíritu Santo sobre los elementos de la Eucaristía.</LI>
-          <LI>Plegaria Eucarística II es: <br>
+<li><H3>PLEGARIA EUCARÍSTICA:</H3> Esta es la parte central y más importante de la Misa. <br>
+<ol>
+<li><b>De pie</b></li>
+<li><b>S: Oremos hermanos para que este sacrificio, mio y de ustedes sea agradable a Dios Padre Todopoderoso</b></li>
+<li>Oremus, fratres, ut hoc sacrificium meum ac vestrum Deo Patri omnipotenti placeat.</li>
+<li><b>El Señor reciba de tus manos este sacrificio para alabanza y gloria de su Nombre, para nuestro bien y de toda su Santa Iglesia</b></li>
+<li>Suscipiat Dominus hoc sacrificium de manibus tuis ad laudem et gloriam nominis sui, ad bonum nostrum et ad universam Ecclesiam sanctam suam.</li>
+<br>
+<UL>
+<LI><h3>PREFACIO:</h3> Introducción a la Plegaria Eucarística, que culmina con el "Santo".</LI>
+<LI>El término "prefacio" proviene del latín praefatio, que significa "proemio" o "introducción". En la liturgia, el Prefacio es una oración de acción de gracias y alabanza a Dios, que introduce la parte más solemne de la misa, que es la consagración.</LI>
+<LI>ESTRUCTURA DEL PREFACIO</LI>
+<li><b>De pie</b></li>
+<LI><b> Sacerdote: "El Señor esté con ustedes." <br>
+  Sacerdos: « Dóminus vobíscum ». <br>
+  Asamblea: "Y con tu espíritu."<br>
+  Conventus: "Et cum spiritu tuo".<br><br>
+  Sacerdote: "Levantemos el corazón."<br>
+  Sacerdos: « Levemus corda nostra ».<br>
+  Asamblea: "Lo tenemos levantado hacia el Señor."<br>
+  Conventus: «Suscitati sumus ad Dominum».<br><br>
+  Sacerdote: "Demos gracias al Señor, nuestro Dios."<br>
+  Sacerdos: « Gratias agamus Domino Deo nostro ».<br>
+  Asamblea: "Es justo y necesario."<br>
+  Conventus: "Est aequum et necessarium".
+</LI></b><br>
+<li>El sacerdote hará un pequeña oración:</li>
+<LI> (Prefacio Común I): <br><b> "En verdad es justo y necesario, es nuestro deber y salvación darte gracias siempre y en todo lugar, Señor, Padre santo, Dios todopoderoso y eterno, por Cristo, Señor nuestro. Porque él, con su nacimiento, renovó la vieja condición humana; con su pasión, destruyó nuestro pecado; al resucitar de entre los muertos, nos aseguró el acceso a la vida eterna; y en su ascensión al Padre, abrió las puertas del cielo."</b></LI><br>
+<li>Vere dignum et iustum est, aequum et salutare, tibi gratias agere semper et ubique Domine, sancte Pater, omnipotens eterne Deus, per Christum Dominum nostrum. Quia veterem hominem cum sua nativitate renovavit; sua passione delevit peccatum nostrum; Ex mortuis resurrectio, ad vitam seternam nobis praestitit accessum; et in ascensione ad Patrem, portas celi aperuit.</li><br><br>
+<LI>Prefacios Propios: Se utilizan en tiempos específicos del año litúrgico (Adviento, Cuaresma, Pascua, etc.) o en fiestas y solemnidades especiales.</LI>
+<LI>Prefacios Comunes: Se usan en misas ordinarias, cuando no se requiere un prefacio especial.</LI><br>
+<LI><h3>EL SANTO</h3></LI>
+<li><b>De pie</b></li>
+<LI> Santo, Santo, Santo es el Señor, Dios del universo. <br>
+  Llenos están el cielo y la tierra de tu gloria.
+  Hosanna en el cielo. <br>
+  Bendito el que viene en nombre del Señor.
+  Hosanna en el cielo. <br><br>
+  </LI>
+  <li>Isaías 6:3: En la visión de Isaías, los serafines que rodean el trono de Dios claman: <br>
+  "Y se decían el uno al otro: 'Santo, santo, santo es el Señor de los ejércitos; toda la tierra está llena de su gloria.'" <br> <br>
 
-            "Santifica estos dones con la efusión de tu Espíritu, de manera que sean para nosotros el Cuerpo y la Sangre de Jesucristo, nuestro Señor."</LI><br>
-          <LI><h3>CONSAGRACIÓN:</h3> <br>
-            <b>De Rodillas</b><br>
-            El sacerdote recita las palabras de Jesús en la Última Cena, y el pan y el vino se convierten en el Cuerpo y la Sangre de Cristo.</LI><br>
-          <LI><H3>ANÁMNESIS:</H3> Recordatorio de la Pasión, Muerte, Resurrección y Ascensión de Jesús.</LI>
-          <LI>La palabra "anámnesis" proviene del griego y significa "memoria" o "conmemoración".</LI>
+  Apocalipsis 4:8: En la visión de San Juan, los seres vivientes alrededor del trono de Dios también cantan: <br>
+  "Santo, santo, santo es el Señor Dios Todopoderoso, el que era, el que es, y el que ha de venir." <br> <br>
 
-          <LI>SIGNIFICADO</LI>
-          <LI>Durante la Anámnesis, la Iglesia hace memoria del sacrificio de Cristo y lo presenta al Padre, uniéndose espiritualmente a ese único sacrificio redentor.</LI>
-          <LI>Es una proclamación de fe en la obra salvadora de Cristo y una participación en su sacrificio.</LI><br><br>
-          <LI>Plegaria Eucarística II, una de las más  utilizadas: <br>
-            <b> "Así, pues, Padre, al celebrar ahora el memorial de la muerte y resurrección de tu Hijo, te ofrecemos el pan de vida y el cáliz de salvación, y te damos gracias porque nos haces dignos de servirte en tu presencia."</b><br><br>
-            En otras plegarias eucarísticas, la fórmula puede variar un poco, pero siempre mantiene el enfoque en la conmemoración del sacrificio de Cristo y la presentación de este sacrificio al Padre.
-            </LI>
-            <li><b>S: Este es el sacramento de nuestra fe</b></li>
-            <li>N: Sacramentum fidei nostrae hoc est</li>
-            <li><b>Anunciamos tu muerte, proclamamos tu resurrección, ven Señor Jesús</b></li>
-            <li>Mortem tuam annuntiamus, resurrectionem tuam annuntiamus, !veni Domine Iesu!</li><br><br>
-            <li><b>1 Corintios 16:22: "Si alguno no ama al Señor, sea anatema. ¡Maranatha!".</b></li>
-            <li>	Intercesiones: Se ora por la Iglesia, el Papa, el obispo local, los difuntos, y toda la asamblea.</li>
-            <li>	Doxología Final: Concluye la Plegaria Eucarística con una alabanza a la Santísima Trinidad.</li> <br>
-            <li><b>Por Cristo, con Él y en Él, a tí Dios Padre Omnipotente en la unidad del Espíritu Santo todo honor y toda gloria , por los siglos de los siglos </b></li>
-            <li>Per Christum, cum ipso et in ipso, tibi Deo Patri omnipotenti in unitate Spiritus Sancti, omnis honor et omnis gloria, per omnia saecula saeculorum.</li>
-            <li><b>Amén</b></li>
+  "Bendito el que viene en nombre del Señor. Hosanna en el cielo."
+  Esta parte se basa en el Salmo 118:26 y en el relato de la entrada triunfal de Jesús en Jerusalén: <br> <br>
+
+  Salmo 118:26: <br>
+  "Bendito el que viene en nombre del Señor; desde la casa del Señor os bendecimos." <br> <br>
+
+  Mateo 21:9 (y paralelos en Marcos 11:9-10, Lucas 19:38, y Juan 12:13): <br>
+  Durante la entrada triunfal de Jesús a Jerusalén, las multitudes gritaban: <br>
+  "¡Hosanna al Hijo de David! ¡Bendito el que viene en nombre del Señor! ¡Hosanna en las alturas!"</li>
+<LI>
+  <H3>EPÍCLESIS:</H3> Invocación del Espíritu Santo para que las ofrendas se conviertan en el Cuerpo y la Sangre de Cristo.</LI>
+<LI>La Epíclesis es un término que proviene del griego "ἐπίκλησις" (epíklēsis), que significa "invocación" o "súplica".</LI>
+<LI>La Epíclesis es un momento en la misa en que se pide la acción transformadora del Espíritu Santo sobre los elementos de la Eucaristía.</LI>
+<LI>Plegaria Eucarística II es: <br>
+
+  "Santifica estos dones con la efusión de tu Espíritu, de manera que sean para nosotros el Cuerpo y la Sangre de Jesucristo, nuestro Señor."</LI><br>
+<LI><h3>CONSAGRACIÓN:</h3> <br>
+  <b>De Rodillas</b><br>
+  El sacerdote recita las palabras de Jesús en la Última Cena, y el pan y el vino se convierten en el Cuerpo y la Sangre de Cristo.</LI><br>
+<LI><H3>ANÁMNESIS:</H3> Recordatorio de la Pasión, Muerte, Resurrección y Ascensión de Jesús.</LI>
+<LI>La palabra "anámnesis" proviene del griego y significa "memoria" o "conmemoración".</LI>
+
+<LI>SIGNIFICADO</LI>
+<LI>Durante la Anámnesis, la Iglesia hace memoria del sacrificio de Cristo y lo presenta al Padre, uniéndose espiritualmente a ese único sacrificio redentor.</LI>
+<LI>Es una proclamación de fe en la obra salvadora de Cristo y una participación en su sacrificio.</LI><br><br>
+<LI>Plegaria Eucarística II, una de las más  utilizadas: <br>
+  <b> "Así, pues, Padre, al celebrar ahora el memorial de la muerte y resurrección de tu Hijo, te ofrecemos el pan de vida y el cáliz de salvación, y te damos gracias porque nos haces dignos de servirte en tu presencia."</b><br><br>
+  En otras plegarias eucarísticas, la fórmula puede variar un poco, pero siempre mantiene el enfoque en la conmemoración del sacrificio de Cristo y la presentación de este sacrificio al Padre.
+  </LI>
+  <li><b>S: Este es el sacramento de nuestra fe</b></li>
+  <li>N: Sacramentum fidei nostrae hoc est</li>
+  <li><b>Anunciamos tu muerte, proclamamos tu resurrección, ven Señor Jesús</b></li>
+  <li>Mortem tuam annuntiamus, resurrectionem tuam annuntiamus, !veni Domine Iesu!</li><br><br>
+  <li><b>1 Corintios 16:22: "Si alguno no ama al Señor, sea anatema. ¡Maranatha!".</b></li>
+  <li>	Intercesiones: Se ora por la Iglesia, el Papa, el obispo local, los difuntos, y toda la asamblea.</li>
+  <li>	Doxología Final: Concluye la Plegaria Eucarística con una alabanza a la Santísima Trinidad.</li> <br>
+  <li><b>Por Cristo, con Él y en Él, a tí Dios Padre Omnipotente en la unidad del Espíritu Santo todo honor y toda gloria , por los siglos de los siglos </b></li>
+  <li>Per Christum, cum ipso et in ipso, tibi Deo Patri omnipotenti in unitate Spiritus Sancti, omnis honor et omnis gloria, per omnia saecula saeculorum.</li>
+  <li><b>Amén</b></li>
         </UL>
       </li>
     </ol>
@@ -437,6 +452,68 @@
         </ul>
       </li>
     </ol>
+    <h3 class="cita">Qhe significa "hostia"</h3>
+    <p>
+      1. Etimología: <br>
+         - La palabra "hostia" proviene del latín hostia, que originalmente significaba "víctima" o "ofrenda sacrificial". En la antigua Roma, hostia hacía referencia a los animales que se sacrificaban a los dioses.<br><br>
+
+      2. En el contexto católico:<br>
+         - La hostia se refiere al pan ácimo (sin levadura) que se consagra en la Misa y que, para los católicos, se convierte en el Cuerpo de Cristo durante la Eucaristía. Esta transformación ocurre en el momento de la consagración por medio del sacramento de la transubstanciación.<br><br>
+
+      3. Significado teológico:<br>
+         - La hostia es vista como el símbolo y realidad del sacrificio de Cristo, quien se ofreció como víctima (hostia) por la redención de la humanidad. Por ello, al recibir la hostia consagrada, los fieles participan del sacrificio de Jesús en la cruz y de su resurrección.<br><br>
+
+      En resumen, la palabra hostia significa "víctima" u "ofrenda", y en el cristianismo católico se refiere al pan consagrado que representa y es, según la fe, el Cuerpo de Cristo en la Eucaristía.</p>
+
+      <h3 class="cita">RITOS LITURGICOS</h3>
+      <p>Además del rito latino (que es el más común en la Iglesia Católica, incluyendo el Rito Romano), la Iglesia Católica reconoce varios ritos eucarísticos o liturgias dentro de las Iglesias orientales en comunión con Roma. Estos ritos pertenecen a diferentes tradiciones litúrgicas y son usados por las Iglesias católicas orientales. En total, la Iglesia Católica tiene alrededor de 23 Iglesias sui iuris (autónomas) que siguen diferentes ritos litúrgicos. <br><br>
+
+        Aquí te doy un resumen de los principales ritos eucarísticos reconocidos por la Iglesia Católica además del rito latino:<br><br>
+
+         1. Rito Alejandrino<br>
+           - Liturgia de San Marcos.<br>
+           - Usado por la Iglesia Católica Copta y la Iglesia Católica Etíope-Eritrea.<br>
+           - Derivado de las antiguas tradiciones litúrgicas de Alejandría.<br><br>
+
+         2. Rito Antioqueno<br>
+           - Liturgia de San Santiago (Santiago el Menor).<br>
+           - Usado por la Iglesia Católica Siro-Malankar y la Iglesia Católica Siria.<br>
+           - Se originó en la Iglesia de Antioquía y tiene una gran influencia en las liturgias orientales.<br><br>
+
+         3. Rito Armenio<br>
+           - Liturgia de San Gregorio el Iluminador.<br>
+           - Usado por la Iglesia Católica Armenia.<br>
+           - Derivado de las antiguas tradiciones litúrgicas armenias.<br><br>
+
+         4. Rito Bizantino (Constantinopolitano)<br>
+           - Liturgia de San Juan Crisóstomo (la más utilizada).<br>
+           - Liturgia de San Basilio (usada en ocasiones especiales).<br>
+           - Usado por varias Iglesias católicas orientales como la Iglesia Greco-Católica Melquita, la Iglesia Católica Ucraniana, la Iglesia Católica Rumana, entre otras.<br>
+           - Es uno de los ritos más extendidos dentro de las Iglesias orientales en comunión con Roma.<br><br>
+
+         5. Rito Caldeo<br>
+           - Liturgia de los Santos Addai y Mari.<br>
+           - Usado por la Iglesia Católica Caldea y la Iglesia Católica Siro-Malabar.<br>
+           - Derivado de las antiguas tradiciones litúrgicas de la Iglesia en Mesopotamia.<br><br>
+
+         6. Rito Maronita<br>
+           - Liturgia Maronita.<br>
+           - Usado exclusivamente por la Iglesia Maronita.<br>
+           - Tiene influencia antioquena pero ha desarrollado su propia tradición única a lo largo de los siglos.<br><br>
+
+         7. Rito Siríaco Occidental<br>
+           - Liturgia de San Sixto.<br>
+           - Usado por la Iglesia Católica Siria y en ocasiones también por la Iglesia Católica Siro-Malankar.<br><br>
+
+         Rito Latino (Rito Romano):<br>
+      Es bueno destacar que incluso dentro de este, existen algunas variantes:
+        - Forma Ordinaria (usada desde el Concilio Vaticano II).
+        - Forma Extraordinaria (el Misal de 1962, conocido como la Misa Tridentina).
+        - Otros sub-ritos latinos como el Rito Ambrosiano (en Milán), el Rito Mozárabe (en Toledo, España), y otros más específicos como el Rito Cartujo y el Rito Dominicano.
+
+         En resumen:
+        La Iglesia Católica tiene una rica diversidad de ritos eucarísticos, lo que refleja su carácter universal.
+        </p>
 </section>
 <!-- /////////////////////////////////////// -->
 <section id="despedida">
